<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chatpet_background"
    tools:context=".ChatActivity">

    <TextView
        android:id="@+id/LLMResults"
        android:layout_width="250dp"
        android:layout_height="50sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="@color/my_custom_green"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:text="Click an option to chat!"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="@android:color/transparent"
        android:contentDescription="Back"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/petPicture"
        android:layout_marginBottom="-60dp"

        android:layout_width="260dp"
        android:layout_height="340dp"
        android:background="@drawable/bg_oval_light"
        android:scaleType="centerInside"


        app:layout_constraintBottom_toTopOf="@id/LLMResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintVertical_bias="0.11"
        app:srcCompat="@drawable/honey"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollMessages"
        app:layout_constraintHorizontal_bias="0.5"
        android:gravity="center"
        android:layout_marginBottom="55dp"
        >
        <Button
            android:id="@+id/chatHello"
            android:layout_width="81dp"
            android:layout_height="95dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/my_custom_green"
            android:text="Hello!"
            android:textSize="12sp"
            />
        <Button
            android:id="@+id/chatGreeting"
            android:layout_width="81dp"
            android:layout_height="95dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/my_custom_green"
            android:text="How are you?"
           />

        <Button
            android:id="@+id/chatJoke"
            android:layout_width="81dp"
            android:layout_height="95dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/my_custom_green"
            android:text="Tell me a joke!"
             />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/scrollMessages"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LLMResults"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
        >

        <LinearLayout
            android:id="@+id/messageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>