<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/message_root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    >
    
    <LinearLayout
        android:layout_width="200dp"
        android:id="@+id/messageComponent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="10dp"
        android:background ="@color/my_custom_blue">
        <TextView
            android:id="@+id/sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="default"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:background ="@color/my_custom_blue"
            />
        <TextView
            android:id="@+id/message_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="default"
            android:textColor= "@color/black"
            android:background ="@color/my_custom_blue"
            android:layout_marginTop="4dp"/>
        
        
    </LinearLayout>
</LinearLayout>